CSS fix for scrollbar/overflow

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -59,11 +59,6 @@
     margin-right: 10px;
   }
 
-  html,
-body {
-margin: 0;
-height: 100%;
-}
 
 /* ............................................................... */
 /* ............................................................... */
