--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    margin-left: 0px !important;
+}
+
+html
+{
+    margin: 0;
+    height: 100%;
+}
